Updates from Overleaf

--- a/Manuscript/Manuscript.tex
+++ b/Manuscript/Manuscript.tex
@@ -108,11 +108,11 @@ To estimate the decrease in steady-state \pCOtwo associated with the increase of
 
 The silicate weathering component of GEOCLIM calculates \COtwo consumption resulting from silicate weathering for subaerially exposed land. We assume that Ca and Mg are the only cations that consume \COtwo over geologic time-scales, such that each mole of Ca or Mg that is dissolved by silicate weathering consumes one mole of \COtwo. While reverse weathering is another potential sink for Ca or Mg \citep{Michalopoulos1995a}, its parameterization is unclear and it has been interpreted to be a relatively minor flux in the Cenozoic \citep{Isson2018a}, and so we do not include it in our model. In previous versions of the model, silicate weathering was a function of temperature and runoff only, and all bedrock was assigned identical chemical compositions \cite{Godderis2017c}. More recent versions of GEOCLIM implement regolith development and soil shielding (Fig. \ref{fig:regolith_schematic}), which introduces a dependence on erosion rate (and therefore topographic slope) \cite{Maffre2018a}. While this introduction of regolith development into GEOCLIM is important for assessing the impact of tropical arc-continent collisions on \pCOtwo, the relatively high Ca+Mg concentration in arc rocks relative to other lithologies must also be considered.
 
-We therefore implement variable bedrock Ca+Mg concentration into GEOCLIM (\SI). The spatial distribution of lithologies is sourced from the Global Lithologic Map (GLiM) \cite{Hartmann2012a} and is represented by 6 categories: metamorphic, felsic, intermediate, mafic, carbonate, and siliciclastic sediment. Each land pixel is assigned these lithologic categories at a resolution of 0.1\degrees $\times$ 0.1\degrees. The Ca+Mg concentrations of felsic, intermediate, and mafic lithologies are assigned based on the mean of data of these lithologic categories compiled in EarthChem (\url{www.earthchem.org/portal}). Given that GLiM does not distinguish ultramafic lithologies, such rocks are grouped with mafic rocks. As a result, the Ca+Mg concentration is likely an underestimate in regions of obducted ophiolites, such that the estimated effect of these regions on changing steady-state \pCOtwo is conservative. The weathering of carbonate does not contribute to long-term \COtwo consumption and its Ca+Mg concentration is ignored. The Ca+Mg concentrations of metamorphic and siliciclastic sediment lithologies are more difficult to define, since their chemical composition is strongly dependent on protolith composition and, in the case of siliciclastic sediment, the degree of previous chemical depletion. We explore a range of feasible Ca+Mg concentrations for metamorphic rocks and siliciclastic sediment during calibration of the silicate weathering component of GEOCLIM.
+We therefore implement variable bedrock Ca+Mg concentration into GEOCLIM (\SI). The spatial distribution of lithologies is sourced from the Global Lithologic Map (GLiM) \cite{Hartmann2012a} and is represented by 6 categories: metamorphic, felsic, intermediate, mafic, carbonate, and siliciclastic sediment. Each land pixel is assigned these lithologic categories at a resolution of 0.1\degrees $\times$ 0.1\degrees. The Ca+Mg concentrations of felsic, intermediate, and mafic lithologies are assigned based on the mean of data of these lithologic categories compiled in EarthChem (\url{www.earthchem.org/portal}). Given that GLiM does not distinguish ultramafic lithologies, such rocks are grouped with mafic rocks. As a result, the Ca+Mg concentration is likely an underestimate in regions of obducted ophiolites, such that the estimated effect of these regions on changing steady-state \pCOtwo is conservative \cite{Schopka2011a}. The weathering of carbonate does not contribute to long-term \COtwo consumption and its Ca+Mg concentration is ignored. The Ca+Mg concentrations of metamorphic and siliciclastic sediment lithologies are more difficult to define, since their chemical composition is strongly dependent on protolith composition and, in the case of siliciclastic sediment, the degree of previous chemical depletion. The siliciclastic sediment lithologic category also includes sedimentary sequences in which any carbonate is identified but is not the dominant lithology \cite{Hartmann2012a}. We explore a range of feasible Ca+Mg concentrations for metamorphic rocks and siliciclastic sediment during calibration of the silicate weathering component of GEOCLIM, but assume that all pixels of a given lithologic category share the same Ca+Mg concentration.
 
 \subsection*{Calibration}
 
-The values of four parameters within the silicate weathering component that modify the dependence of silicate weathering on temperature, runoff, erosion, and regolith thickness are poorly constrained. Rather than prescribing values, we allow these parameters and the Ca+Mg concentration of metamorphic and siliciclastic lithologies to vary within reasonable bounds (\SI; Table S2). This approach results in 93,600 unique combinations of these six parameters. For each combination, we compute spatially resolved long-term \COtwo consumption associated with Ca+Mg fluxes using present-day runoff, temperature, and slope. We sum computed \COtwo consumption over watersheds for which data-constrained estimates are available \cite{Gaillardet1999a, Moquet2018a}, then calculate the coefficient of determination ($r^{2}$) between computed and measured \COtwo consumption in each of these watersheds. After eliminating parameter combinations that result in low $r^{2}$, 573 parameter combinations remain (\SI; Fig. S2). The resulting global \COtwo consumption of these filtered model runs all overlap with independently derived estimates of the global \COtwo degassing flux \cite{Gerlach2011a}, as they should given that the long-term carbon cycle is in steady state (\SI; Fig. S2).
+The values of four parameters within the silicate weathering component that modify the dependence of silicate weathering on temperature, runoff, erosion, and regolith thickness are poorly constrained. Rather than prescribing single values, we test several reasonable values for each of these four parameters along with the Ca+Mg concentration of metamorphic and siliciclastic lithologies (\SI; Table S2). We then permute all possible combinations of these reasonable values for the six parameters, leading to 93,600 unique parameter combinations (i.e. permutations). For each combination, we compute spatially resolved long-term \COtwo consumption associated with Ca+Mg fluxes using present-day runoff, temperature, and slope. We sum computed \COtwo consumption over watersheds for which data-constrained estimates are available \cite{Gaillardet1999a, Moquet2018a}, then calculate the coefficient of determination ($r^{2}$) between computed and measured \COtwo consumption in each of these watersheds. After eliminating parameter combinations that result in low $r^{2}$, 573 parameter combinations remain (\SI; Fig. S3). The resulting global \COtwo consumption of these filtered model runs all overlap with independently derived estimates of the global \COtwo degassing flux \cite{Gerlach2011a}, as they should given that the long-term carbon cycle is in steady state (\SI; Fig. S3).
 
 \subsection*{Climate Model Component}
 
@@ -134,15 +134,15 @@ Having calibrated the silicate weathering component of GEOCLIM, we use it to est
     \label{fig:scenario_pCO2}
 \end{figure*}
 
-To determine the position of paleoshorelines in the SEAI over the past 15~m.y., we use terrestrial and marine sedimentary deposits (Fig. \ref{fig:shoreline_growth}; \SI). The paleoshoreline data indicate that the Sunda-Banda Arc and New Guinea are primarily responsible for the increase in area since 15~Ma. Exhumation of the modern Sunda-Banda Arc is the result of ongoing arc-continent collision with the Australian Plate \cite{Harris2006a}. Most of Sumatra and Java along with the non-volcanic islands of the Outer Banda Arc were elevated above sea level after 5~Ma \cite{Hall2013b}. In New Guinea, emergence in the mid-Miocene is associated with collision between the Melanesian Arc and Australia's distal margin \cite{Cloos2005a}, which drove exhumation of the Irian-Marum-April Ophiolite Belt. Exhumation accelerated over the past 4~m.y. in the New Guinea Central Range due to slab-breakoff and buoyant uplift, and in eastern New Guinea due to jamming of the north-dipping subduction zone \cite{Cloos2005a}. We also include changes in areas of presently submerged continental shelves such as the Sunda Shelf that were previously exposed (\SI; Fig. S5). These tectonic drivers and others throughout the region led to progressive emergence over the past 15~m.y. that accelerated following 5~Ma (Fig. \ref{fig:shoreline_growth}B). This trend mirrors broad cooling over the Neogene that resulted in the initiation of Northern Hemisphere ice sheets (Fig. \ref{fig:shoreline_growth}C).
+To determine the position of paleoshorelines in the SEAI over the past 15~m.y., we use terrestrial and marine sedimentary deposits (Fig. \ref{fig:shoreline_growth}; \SI). The paleoshoreline data indicate that the Sunda-Banda Arc and New Guinea are primarily responsible for the increase in area since 15~Ma. Exhumation of the modern Sunda-Banda Arc is the result of ongoing arc-continent collision with the Australian Plate \cite{Harris2006a}. Most of Sumatra and Java along with the non-volcanic islands of the Outer Banda Arc were elevated above sea level after 5~Ma \cite{Hall2013b}. In New Guinea, emergence in the mid-Miocene is associated with collision between the Melanesian Arc and Australia's distal margin \cite{Cloos2005a}, which drove exhumation of the Irian-Marum-April Ophiolite Belt. Exhumation accelerated over the past 4~m.y. in the New Guinea Central Range due to slab-breakoff and buoyant uplift, and in eastern New Guinea due to jamming of the north-dipping subduction zone \cite{Cloos2005a}. We also include changes in areas of presently submerged continental shelves such as the Sunda Shelf that were previously exposed (\SI; Fig. S6). These tectonic drivers and others throughout the region led to progressive emergence over the past 15~m.y. that accelerated following 5~Ma (Fig. \ref{fig:shoreline_growth}B). This trend mirrors broad cooling over the Neogene that resulted in the initiation of Northern Hemisphere ice sheets (Fig. \ref{fig:shoreline_growth}C).
 
-We use GEOCLIM to estimate \pCOtwo associated with the reconstructed subaerial extent of the SEAI at ca. 15, 10, and 5~Ma (``paleo-SEAI'' scenarios; Fig. \ref{fig:scenario_pCO2}). Because we use a climate model forced with modern geography, the position of the tectonic blocks remain fixed. Although there has been motion of these tectonic blocks since 15~Ma, they have remained within tropical latitudes such that this fixed scenario is a good approximation of the paleogeography (\SI; Fig. S8). We also test an end-member scenario, in which all islands associated with arc-continent collision in the region are removed (``removed SEAI'' scenario; Fig. \ref{fig:scenario_pCO2}).
+We use GEOCLIM to estimate \pCOtwo associated with the reconstructed subaerial extent of the SEAI at ca. 15, 10, and 5~Ma (``paleo-SEAI'' scenarios; Fig. \ref{fig:scenario_pCO2}). Because we use a climate model forced with modern geography, the position of the tectonic blocks remain fixed. Although there has been motion of these tectonic blocks since 15~Ma, they have remained within tropical latitudes such that this fixed scenario is a good approximation of the paleogeography (\SI; Fig. S9). We also test an end-member scenario, in which all islands associated with arc-continent collision in the region are removed (``removed SEAI'' scenario; Fig. \ref{fig:scenario_pCO2}).
 
 \section*{\pCOtwo Estimates}
 
-Using the 573 unique parameter combinations, the ``paleo-SEAI'' scenarios resulted in 526--678~ppm for 15~Ma, 457--516~ppm for 10~Ma, and 391--434~ppm \pCOtwo for 5~Ma (Fig. \ref{fig:scenario_pCO2}). These results indicate a progressive decrease in \pCOtwo over the Neogene associated with the emergence of the SEAI, and suggest that without this emergence, pre-industrial \pCOtwo would have been $\sim$526--678~ppm. We note that these ``paleo-SEAI'' scenarios do not account for Neogene changes outside of the SEAI (e.g. changes in ocean/atmosphere circulation, volcanic degassing, and weathering fluxes elsewhere on Earth, discussed in \textit{Alternative Mechanisms for Neogene Cooling}). Therefore, these results do not imply that \pCOtwo would have been observed to be 526--678~ppm at 15~Ma, but rather that emergence of the SEAI alone is responsible for decreasing \pCOtwo by 240--392~ppm (526--678~ppm minus 286~ppm) over the past 15~m.y..
+Using the 573 unique parameter combinations, the ``paleo-SEAI'' scenarios resulted in 526--678~ppm for 15~Ma, 457--516~ppm for 10~Ma, and 391--434~ppm \pCOtwo for 5~Ma (Fig. \ref{fig:scenario_pCO2}). These results indicate a progressive decrease in \pCOtwo over the Neogene associated with the emergence of the SEAI, and suggest that without this emergence, pre-industrial \pCOtwo would have been $\sim$526--678~ppm. Increasing seawater Mg/Ca since ca. 15~Ma \cite{Higgins2012a} is consistent with an increasing proportion of the global silicate weathering flux being derived from mafic and ultramafic sources. We note that these ``paleo-SEAI'' scenarios do not account for Neogene changes outside of the SEAI (e.g. changes in ocean/atmosphere circulation, volcanic degassing, and weathering fluxes elsewhere on Earth, discussed in \textit{Alternative Mechanisms for Neogene Cooling}). Therefore, these results do not imply that \pCOtwo would have been observed to be 526--678~ppm at 15~Ma, but rather that emergence of the SEAI alone is responsible for decreasing \pCOtwo by 240--392~ppm (526--678~ppm minus 286~ppm) over the past 15~m.y.
 
-Proxy-based estimates of the magnitude and trajectory of \pCOtwo change from the Miocene to the Pliocene are variable between techniques and associated assumptions underlying their interpretation (\SI; Fig. S9). The \pCOtwo values from the 5~Ma ``paleo-SEAI'' scenario overlap with many proxy-based estimates \cite{Foster2017a} as well as values that emerge from approaches that assimilate climate and ice sheet model output with benthic \dO data \cite{van-de-Wal2011a, Berends2020a}. The modeled \pCOtwo values for 15~Ma resemble the higher end of proxy-based \pCOtwo estimates for the early to mid-Miocene, indicating that the increase in subaerially exposed land area and tectonic topography of the SEAI is sufficient to explain long-term cooling of Earth's climate over the Neogene. The \pCOtwo threshold for Antarctic glaciation is estimated to be $\sim$750~ppm with that for Northern Hemisphere glaciation being significantly lower at $\sim$280~ppm \cite{DeConto2008a}. These modeled values of decreasing \pCOtwo associated with emergence of the SEAI are therefore consistent with the record of Neogene climate with Miocene ice sheets on Antarctica \cite{Sugden1995a} followed by Northern Hemisphere ice sheets developing in the Pliocene \cite{Haug2005a} as \pCOtwo subsequently decreased.
+Proxy-based estimates of the magnitude and trajectory of \pCOtwo change from the Miocene to the Pliocene are variable between techniques and associated assumptions underlying their interpretation (\SI; Fig. S10). The \pCOtwo values from the 5~Ma ``paleo-SEAI'' scenario overlap with many proxy-based estimates \cite{Foster2017a} as well as values that emerge from approaches that assimilate climate and ice sheet model output with benthic \dO data \cite{van-de-Wal2011a, Berends2020a}. The modeled \pCOtwo values for 15~Ma resemble the higher end of proxy-based \pCOtwo estimates for the early to mid-Miocene, indicating that the increase in subaerially exposed land area and tectonic topography of the SEAI is sufficient to explain long-term cooling of Earth's climate over the Neogene. The \pCOtwo threshold for Antarctic glaciation is estimated to be $\sim$750~ppm with that for Northern Hemisphere glaciation being significantly lower at $\sim$280~ppm \cite{DeConto2008a}. These modeled values of decreasing \pCOtwo associated with emergence of the SEAI are therefore consistent with the record of Neogene climate with Miocene ice sheets on Antarctica \cite{Sugden1995a} followed by Northern Hemisphere ice sheets developing in the Pliocene \cite{Haug2005a} as \pCOtwo subsequently decreased.
 
 The results of our ``paleo-SEAI'' scenarios highlight the importance of the combination of topography, runoff, and lithology in setting Earth's climate state. To independently explore the effect of the modern-day surface exposure of low-relief basaltic lavas on steady-state \pCOtwo \cite{Kent2013a}, we replace mafic volcanics associated with the Deccan Traps, Ethiopian Traps, and Columbia River Basalts with the Ca+Mg concentration of bulk continental crust in GEOCLIM (Fig. \ref{fig:scenario_pCO2}). The resulting \pCOtwo is $<$500~ppm, indicating that, while the presence of mafic rocks in these igneous provinces modulates steady-state \pCOtwo as has been suggested to be important for Paleogene cooling \cite{Kent2013a}, its contribution is less than that of the SEAI, which have high-relief and a wet tropical climate in conjunction with high Ca+Mg lithologies.
 
@@ -158,9 +158,9 @@ Some hypotheses to explain ice sheet growth over the Neogene invoke changes in o
 
 A decrease in volcanic degassing \cite{Berner1983a} has also been proposed as a driver for Neogene cooling. However, proxy-based estimates of the evolution of volcanic degassing fluxes throughout the Neogene are inconsistent with each other, such that not even the sign of the change in volcanic degassing over the past $\sim$15~m.y. is without ambiguity \cite{Godderis2017c}. For example, it has both been estimated that the volcanic degassing flux was $\sim$25\% lower \cite{Cogne2006a} and $\sim$10\% higher \cite{Van-Der-Meer2014a} at 15~Ma relative to the present day.
 
-Our model framework provides an opportunity to estimate the decrease in volcanic degassing flux necessary to achieve the same change in \pCOtwo predicted for the increase in global weatherability associated with the emergence of the SEAI over the past 15~m.y. If we use the parameter combination that had the highest $r^{2}$ between computed and measured \COtwo consumption in watersheds around the world during calibration (\textit{Calibration} and \SI; Fig. S3), GEOCLIM estimates a pre-industrial volcanic degassing flux of 4.1$\times$10$^{12}$~mol/yr to balance the silicate weathering flux at 286~ppm. If we then assume that this volcanic degassing flux did not change over the past 15~m.y., then GEOCLIM estimates that the increase in global weatherability associated with the emergence of the SEAI led to a change in \pCOtwo of $\sim$280~ppm (``increase in weatherability only'' scenario in Fig. \ref{fig:weatherability_curves}). If we instead assume that global weatherability did not change over the past 15~m.y., then we estimate that the volcanic degassing flux needs to have been $\sim$13\% greater at 15~Ma relative to the pre-industrial to drive the same $\sim$280~ppm change in \pCOtwo (``decrease in degassing only'' scenario in Fig. \ref{fig:weatherability_curves}). This $\sim$13\% value is higher than 10\%, the highest current estimate for the volcanic degassing flux at 15~Ma relative to the present day \cite{Van-Der-Meer2014a}.
+Our model framework provides an opportunity to estimate the decrease in volcanic degassing flux necessary to achieve the same change in \pCOtwo predicted for the increase in global weatherability associated with the emergence of the SEAI over the past 15~m.y. If we use the parameter combination that had the highest $r^{2}$ between computed and measured \COtwo consumption in watersheds around the world during calibration (\textit{Calibration} and \SI; Fig. S4), GEOCLIM estimates a pre-industrial volcanic degassing flux of 4.1$\times$10$^{12}$~mol/yr to balance the silicate weathering flux at 286~ppm. If we then assume that this volcanic degassing flux did not change over the past 15~m.y., then GEOCLIM estimates that the increase in global weatherability associated with the emergence of the SEAI led to a change in \pCOtwo of $\sim$280~ppm (``increase in weatherability only'' scenario in Fig. \ref{fig:weatherability_curves}). If we instead assume that global weatherability did not change over the past 15~m.y., then we estimate that the volcanic degassing flux needs to have been $\sim$13\% greater at 15~Ma relative to the pre-industrial to drive the same $\sim$280~ppm change in \pCOtwo (``decrease in degassing only'' scenario in Fig. \ref{fig:weatherability_curves}). This $\sim$13\% value is higher than 10\%, the highest current estimate for the volcanic degassing flux at 15~Ma relative to the present day \cite{Van-Der-Meer2014a}.
 
-However, changes in the volcanic degassing flux would have modulated changes in \pCOtwo associated with changes in global weatherability. For example, some proxy-based approaches as well as some model-data assimilation approaches estimate that mid-Miocene \pCOtwo was lower than 568~ppm (\SI; Fig. S9). Take a scenario in which \pCOtwo was 400~ppm at 15~Ma. If we assume that the \pCOtwo decrease to the pre-industrial value of 286~ppm was driven by the increase in global weatherability associated with emergence of the SEAI in conjunction with an increase in volcanic degassing which counteracts cooling by increasing the flux of \COtwo to the atmosphere (``increase in weatherability and degassing'' scenario in Fig. \ref{fig:weatherability_curves}), the volcanic degassing flux would have had to have been $\sim$7\% smaller than the pre-industrial. More robust constraints on \pCOtwo (\SI; Fig. S9) and/or volcanic degassing rates over the past 20~m.y. are needed to constrain which of the ``increase in weatherability only'' or ``increase in weatherability and degassing'' scenarios (Fig. \ref{fig:weatherability_curves}) is more representative of the mechanisms driving Neogene cooling.
+However, changes in the volcanic degassing flux would have modulated changes in \pCOtwo associated with changes in global weatherability. For example, some proxy-based approaches as well as some model-data assimilation approaches estimate that mid-Miocene \pCOtwo was lower than 568~ppm (\SI; Fig. S10). Take a scenario in which \pCOtwo was 400~ppm at 15~Ma. If we assume that the \pCOtwo decrease to the pre-industrial value of 286~ppm was driven by the increase in global weatherability associated with emergence of the SEAI in conjunction with an increase in volcanic degassing which counteracts cooling by increasing the flux of \COtwo to the atmosphere (``increase in weatherability and degassing'' scenario in Fig. \ref{fig:weatherability_curves}), the volcanic degassing flux would have had to have been $\sim$7\% smaller than the pre-industrial. More robust constraints on \pCOtwo (\SI; Fig. S10) and/or volcanic degassing rates over the past 20~m.y. are needed to constrain which of the ``increase in weatherability only'' or ``increase in weatherability and degassing'' scenarios (Fig. \ref{fig:weatherability_curves}) is more representative of the mechanisms driving Neogene cooling.
 
 \begin{figure}[h!]
     \centering
@@ -179,7 +179,7 @@ Himalayan uplift would have affected geological carbon sinks, either via increas
 
 If geological carbon sources remain approximately constant, global alkalinity delivery from silicate weathering needs to be approximately constant as well to keep the long-term carbon cycle in steady-state \cite{Kump1997a}. Enhanced silicate weathering in a region such as the SEAI is compensated by a decrease in silicate weathering elsewhere. Global alkalinity delivery from silicate weathering does not change, but occurs more efficiently and thereby at lower \pCOtwo. Given that carbonate weathering is disconnected from the long-term carbon-cycle mass balance, changes in carbonate accumulation through time \cite{Si2019a} could be driven by changes in carbonate weathering.
 
-Alkalinity generated by the weathering of silicate Na and K consumes \COtwo until that alkalinity is removed via reverse weathering reactions \cite{Sun2016a}. Therefore, an imbalance in the Na and K cycles could consume significant quantities of \COtwo over multi-million year time-scales. However, the biogeochemical cycles of Na and K are currently poorly constrained, such that the residence time of these two cations, and therefore the time-scale over which an imbalance in their cycles could drive \COtwo consumption, is not well known. Estimates for these values in the literature range from XX to XX~m.y. We have therefore made the assumption in GEOCLIM that alkalinity generated by the weathering of silicate Na and K is instantaneously removed by reverse weathering reactions, but acknowledge that further work is necessary to evaluate whether such an assumption is valid.
+Alkalinity generated by the weathering of silicate Na and K consumes \COtwo until that alkalinity is removed via reverse weathering reactions \cite{Sun2016a}. Therefore, sustained imbalances in the Na and K cycles could consume/generate significant quantities of \COtwo over multi-million year time-scales. However, the biogeochemical cycles of Na and K are currently poorly constrained. As such, the residence time of these two cations, and therefore the time-scale over which an imbalance in their cycles could drive \COtwo consumption/generation, is not well known. Estimates for these values in the literature range from $\sim$45-80~m.y. for Na, and $\sim$8-10~m.y. for K \cite{Emerson2008a, Lecuyer2016a}. Furthermore, it is not clear how to parameterize the output fluxes of Na and K. We have therefore made the assumption in GEOCLIM that alkalinity generated by the weathering of silicate Na and K is instantaneously removed by reverse weathering reactions, but acknowledge that further work is necessary to evaluate how important imbalances in the Na and K cycles are for the geologic carbon cycle.
 
 The long-term carbon-cycle mass balance can be perturbed via mechanisms that are disconnected from changes in volcanic degassing and silicate weathering rates. For example, sulphide oxidation coupled to carbonate dissolution could act as a source of \COtwo on million year time-scales \cite{Torres2014a}. Similarly, the weathering of sedimentary organic matter could serve as a source of \COtwo \cite{Hilton2014a}. On the other hand, enhanced burial of organic matter could be an important sink of \COtwo, as has been suggested in the Bengal Fan \cite{Galy2007a} and Taiwan \cite{Kao2014a}. The fluxes of \COtwo represented by these processes are not accounted for in our model framework, and could have been affected by emergence of the SEAI and/or Himalayan orogeny. \pCOtwo changes that result from these processes would be superimposed on \pCOtwo changes associated with evolving silicate weathering rates. However, our coupled weathering-climate model indicates that the \pCOtwo change associated with evolving silicate weathering rates driven by emergence of the SEAI is sufficient to explain the majority of Neogene cooling (Fig. \ref{fig:scenario_pCO2}). Without this emergence, \pCOtwo would have remained above the level necessary for the growth of Northern Hemisphere ice sheets.
 
@@ -281,7 +281,7 @@ $x(z)$ is the abundance profile of primary phases inside the regolith, varying w
 
 \subsection*{Weatherability Curves}
 
-To create the 15~Ma ``paleo-SEAI'' curve shown in Figure \ref{fig:weatherability_curves}, we use the reconstructed paleoshorelines of the SEAI at 15~Ma (Fig. \ref{fig:shoreline_growth}A). We then select the parameter combination that had the highest $r^{2}$ between computed and measured \COtwo consumption in watersheds around the world during calibration (\textit{Calibration} and \SI; Fig. S3), and fix \pCOtwo at the 3 \pCOtwo levels at which the GFDL CM2.0 climate model experiments were computed (\SI). We then run GEOCLIM at each of these \pCOtwo levels until steady state is achieved (i.e. until the volcanic degassing flux is equal to the silicate weathering flux). We then repeat this process for the 10 and 5~Ma ``paleo-SEAI'' paleoshorelines and the present day shorelines to generate the 3 other weatherability curves. Each estimated \pCOtwo in Figure \ref{fig:scenario_pCO2} is the result of underlying weatherability curves that change with the different chemical weathering parameters.
+To create the 15~Ma ``paleo-SEAI'' curve shown in Figure \ref{fig:weatherability_curves}, we use the reconstructed paleoshorelines of the SEAI at 15~Ma (Fig. \ref{fig:shoreline_growth}A). We then select the parameter combination that had the highest $r^{2}$ between computed and measured \COtwo consumption in watersheds around the world during calibration (\textit{Calibration} and \SI; Fig. S4), and fix \pCOtwo at the 3 \pCOtwo levels at which the GFDL CM2.0 climate model experiments were computed (\SI). We then run GEOCLIM at each of these \pCOtwo levels until steady state is achieved (i.e. until the volcanic degassing flux is equal to the silicate weathering flux). We then repeat this process for the 10 and 5~Ma ``paleo-SEAI'' paleoshorelines and the present day shorelines to generate the 3 other weatherability curves. Each estimated \pCOtwo in Figure \ref{fig:scenario_pCO2} is the result of underlying weatherability curves that change with the different chemical weathering parameters.
 
 \subsection*{SI Appendix}
 
