--- a/Manuscript/Supplementary_Information.tex
+++ b/Manuscript/Supplementary_Information.tex
@@ -138,7 +138,7 @@ These supplementary information materials provide details on the model framework
 \begin{figure}[h!]
     \centering
     \includegraphics[width=1\textwidth]{Figures/world_lithology.jpg}
-    \caption{Distribution of lithologies at 0.1\degrees $\times$ 0.1\degrees resolution used in GEOCLIM modified from \cite{Hartmann2012a}.}
+    \caption{Distribution of lithologies at 0.1\degrees $\times$ 0.1\degrees resolution used in GEOCLIM modified from \citet{Hartmann2012a}.}
     \label{fig:world_lithology}
 \end{figure}
 
@@ -147,6 +147,15 @@ We restricted the calculation of the weathering fluxes to the flux of dissolved 
 The spatial distribution of lithologies is sourced from the Global Lithologic Map (GLiM) of \citet{Hartmann2012a}. The raw data takes the form of polygon vectors, where each polygon is assigned one of 16 lithologic categories. We first group these 16 categories into 6 broader categories (metamorphic, felsic, intermediate, mafic, carbonate, and siliciclastic sediment; Table \ref{tab:GLiM_to_GEOCLIM}). We then rasterize the polygon vectors to 0.1\degrees $\times$ 0.1\degrees resolution, where each pixel is assigned the lithologic category of the polygon that covers the greatest area in that pixel (i.e. the `mode lithology'; Fig. \ref{fig:world_lithology}). To improve the computing time of GEOCLIM, we decrease the resolution of the raster to 0.5\degrees $\times$ 0.5\degrees. To do so, a 3-dimensional 720 $\times$ 360 $\times$ 7 matrix is created, in which the fraction of each 0.5\degrees $\times$ 0.5\degrees pixel covered by each of the 6 lithologic categories (or water/ice) is captured by the extra dimension. In this way, we calculate an area-weighted mean Ca+Mg concentration of the surface in each 0.5\degrees $\times$ 0.5\degrees pixel.
 
 The Ca+Mg concentrations of felsic (1,521~mol/m$^{3}$), intermediate (4,759~mol/m$^{3}$), and mafic (10,317~mol/m$^{3}$) lithologies are assigned based on the mean of data compiled from EarthChem (\url{www.earthchem.org/portal}; calculations made in the code within the repository). For metamorphic and siliciclastic lithologies, we explore a range of feasible Ca+Mg concentrations during calibration of the silicate weathering component of GEOCLIM (\textit{GEOCLIM Calibration}).
+
+\begin{figure}[h!]
+    \centering
+    \includegraphics[width=0.8\textwidth]{Figures/resolution_sensitivity.pdf}
+    \caption{Histograms showing the difference in the area-weighted mean Ca+Mg concentration of the surface in each 0.5\degrees $\times$ 0.5\degrees pixel that results from starting with an 0.1\degrees $\times$ 0.1\degrees GLiM raster versus an 0.05\degrees $\times$ 0.05\degrees GLiM raster. The left panel is calculated over all land pixels, whereas the right panel is calculated over land pixels in the SEAI only. Both panels use the parameter values that produced the highest $r^{2}$ during calibration: metamorphic$_{Ca+Mg}=2500$~mol/m$^{3}$ and sediment$_{Ca+Mg}=2000$~mol/m$^{3}$.}
+    \label{fig:resolution_sensitivity}
+\end{figure}
+
+We also explore the sensitivity of the area-weighted mean Ca+Mg concentration of the surface in each 0.5\degrees $\times$ 0.5\degrees pixel to the resolution of the underlying GLiM raster (Fig. \ref{fig:resolution_sensitivity}). We find that the difference in the area-weighted mean Ca+Mg concentration of the surface when using the 0.1\degrees $\times$ 0.1\degrees GLiM raster versus the 0.05\degrees $\times$ 0.05\degrees GLiM raster can be well explained by a tight Gaussian distribution ($\sigma$\textless200~mol/m$^{3}$) about a mean of $\sim$0~mol/m$^{3}$. Therefore, using the lower-resolution GLiM raster does not overall bias our results to higher or lower area-weighted mean Ca+Mg concentrations of the surface, and only introduces some noise that has a magnitude that is significantly smaller than the most Ca+Mg-poor lithologic category (i.e. felsics, at 1,521~mol/m$^{3}$).
 
 \section*{GEOCLIM Calibration}
 
@@ -267,7 +276,7 @@ To explore the sensitivity of our results to the inclusion of the Sunda Shelf an
     \label{fig:pCO2_proxies}
 \end{figure}
 
-Proxy-based \pCOtwo estimates for the past 20~m.y. are shown in Figure \ref{fig:pCO2_proxies} \citep{Bereiter2015a, Foster2017a, Ji2018a, Cui2020a}. Even when stringent quality criteria and the latest understanding of each of the \pCOtwo proxies have been applied to available \pCOtwo records, both significant uncertainty in the estimated \pCOtwo for any given data point as well as disagreement between techniques remain. Statistical methods that are often utilized in an attempt to extract trends from this data (e.g. locally-weighted scatter plot smoothing, LOWESS) evaluate the mean (with some weighting) of the highly scattered data in a given time interval. However, such methods are only appropriate for estimating the ``true'' value at any given time interval in datasets in which individual data points are being drawn from a single distribution about a mean value. The \pCOtwo proxy compilation shown in Figure \ref{fig:pCO2_proxies} consists of several distinct techniques and samples, each with their own set of assumptions and associated probability distributions that influence their reported values. Therefore, simply taking the mean of these values neglects the fact that some of these techniques/samples are more reliable others. Constraining how robust each \pCOtwo proxy technique is remains an important challenge, and as such the ``true'' \pCOtwo could plausibly lie anywhere within the full range of proxy-based \pCOtwo estimates for any given time interval. Nevertheless, our modeled \pCOtwo values for 15~Ma (Fig. \ref{fig:scenario_pCO2_all}) resemble the higher end of proxy-based \pCOtwo estimates for the early-mid-Miocene. Given this scatter in the proxy-based \pCOtwo estimates, we instead infer the Neogene cooling trend from the Miocene benthic foram oxygen isotope record shown in Figure 1 in the main text.
+Proxy-based \pCOtwo estimates for the past 20~m.y. are shown in Figure \ref{fig:pCO2_proxies} \citep{Bereiter2015a, Foster2017a, Ji2018a, Cui2020a}. Even when stringent quality criteria and the latest understanding of each of the \pCOtwo proxies have been applied to available \pCOtwo records, both significant uncertainty in the estimated \pCOtwo for any given data point as well as disagreement between techniques remain. Statistical methods that are often utilized in an attempt to extract trends from this data (e.g. locally-weighted scatter plot smoothing, LOWESS) evaluate the mean (with some weighting) of the highly scattered data in a given time interval. However, such methods are only appropriate for estimating the ``true'' value at any given time interval in datasets in which individual data points are being drawn from a single distribution about a mean value. The \pCOtwo proxy compilation shown in Figure \ref{fig:pCO2_proxies} consists of several distinct techniques and samples, each with their own set of assumptions and associated probability distributions that influence their reported values. Therefore, simply taking the mean of these values neglects the fact that some of these techniques/samples are likely more reliable than the others. Constraining how robust each \pCOtwo proxy technique is remains an important challenge, and as such the ``true'' \pCOtwo could plausibly lie anywhere within the full range of proxy-based \pCOtwo estimates for any given time interval. Nevertheless, our modeled \pCOtwo values for 15~Ma (Fig. \ref{fig:scenario_pCO2_all}) resemble the higher end of proxy-based \pCOtwo estimates for the early-mid-Miocene. Given this scatter in the proxy-based \pCOtwo estimates, we instead infer the Neogene cooling trend from the Miocene benthic foram oxygen isotope record shown in Figure 1 in the main text.
 
 \section*{Paleoshoreline Reconstruction and Geological Synthesis}
 
